Refactor repository: Clean up and remove large/untracked files from version control. Updated .gitignore to exclude unnecessary data files (test1.zip, images, and processed data). Fixed dynamic path handling in main.py for improved module imports and code reliability across different environments.

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ ehthumbs.db
 *.egg-info/
 dist/
 build/
+
+data/images/test1.zip
+data/images/
+data/processed/
+polished-bridge-454119-c2-82467e4c45c5.json
